--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #23a6d5, #23a083);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
@@ -270,42 +270,45 @@ i {
   }
 }
 
-.container {
+.img__wrap {
   position: relative;
-  width: 50%;
 }
 
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
+.img__description_layer {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
+  background: #2E9CCA;
+  color: #fff;
+  visibility: hidden;
   opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
+}
+
+.img__wrap:hover .img__description_layer {
+  visibility: visible;
+  opacity: 0.7;
+}
+
+/* .img__img{
   transition: .5s ease;
-  background-color: #008CBA;
 }
 
-.container:hover .overlay {
-  opacity: 1;
+.img__wrap:hover .img__img {
+  opacity: 0.3;
+} */
+.img__description {
+  transition: .2s;
+  transform: translateY(1em);
 }
 
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
+.img__wrap:hover .img__description {
+  transform: translateY(0);
 }
